: Adding the font to the challenge

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
       sizes="96x96"
     />
 
+    <link rel="stylesheet" href="src/font.css">
+
     <link rel="stylesheet" href="src/styles.css" />
 
     <title>Pricing Table | devChallenges.io</title>
   </head>
-  <body>
+  <body class="font-BeVietnamPro">
     <div class="text-center">
       <p>
         Coded by
