: Creating and adding styles to the header

--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
       sizes="96x96"
     />
 
-    <link rel="stylesheet" href="src/font.css">
+    <link rel="stylesheet" href="src/font.css" />
 
     <link rel="stylesheet" href="src/styles.css" />
 
     <title>Pricing Table | devChallenges.io</title>
   </head>
   <body class="font-BeVietnamPro">
+    <header class="text-center py-10 bg-[url(../resources/bg-pattern.png)] bg-[#F8FAFC] border-solid border-b-[1px]">
+      <h1 class="text-[32px] font-bold text-[#121826] mb-2">Pricing & Plans</h1>
+      <p class="text-base text-[#4D5562]">
+        Discover the plan that unlocks the transformative power <br />
+        of digital art and join our vibrant community today.
+      </p>
+    </header>
+
     <div class="text-center">
       <p>
         Coded by
