--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="font-BeVietnamPro">
     <header
-      class="text-center py-10 bg-[url(../resources/bg-pattern.png)] bg-[#F8FAFC] border-solid border-b-[1px]"
+      class="text-center py-10 bg-[url(../resources/bg-pattern.png)] bg-[#F8FAFC] border-solid border-b-[1px] mb-16"
     >
       <h1 class="text-[32px] font-bold text-[#121826] mb-2">Pricing & Plans</h1>
       <p class="text-base text-[#4D5562]">
@@ -28,118 +28,120 @@
       </p>
     </header>
 
-    <table>
-      <thead>
-        <tr>
-          <th></th>
-          <th>Free</th>
-          <th>Team</th>
-          <th>Popular</th>
-          <th>Enterprise</th>
-        </tr>
-        <tr>
-          <th></th>
-          <th>$0</th>
-          <th>$59</th>
-          <th>$99</th>
-          <th>$299</th>
-        </tr>
-        <tr>
-          <th></th>
-          <th>per month</th>
-          <th>per month</th>
-          <th>per month</th>
-          <th>per month</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Website number</td>
-          <td>01</td>
-          <td>10</td>
-          <td>50</td>
-          <td>Unlimited</td>
-        </tr>
-        <tr>
-          <td>Server storage</td>
-          <td>100 GB</td>
-          <td>500 GB</td>
-          <td>1 TB</td>
-          <td>Unlimited</td>
-        </tr>
-        <tr>
-          <td>Database</td>
-          <td>-</td>
-          <td>15</td>
-          <td>Unlimited</td>
-          <td>Unlimited</td>
-        </tr>
-        <tr>
-          <td>Unmetered Bandwidth</td>
-          <td>-</td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-        </tr>
-        <tr>
-          <td>SSD Disk</td>
-          <td>-</td>
-          <td>-</td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-        </tr>
-        <tr>
-          <td>VCPUS Fontworld</td>
-          <td>-</td>
-          <td>-</td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-        </tr>
-        <tr>
-          <td>Worldpress install</td>
-          <td>-</td>
-          <td>-</td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-        </tr>
-        <tr>
-          <td>Server speed</td>
-          <td>-</td>
-          <td>-</td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-          <td><img src="resources/check-1.svg" alt="check" /></td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <td></td>
-          <td>
-            <button>
-              Get Started
-              <img src="resources/down arrow-1.svg" alt="down_arrow" />
-            </button>
-          </td>
-          <td>
-            <button>
-              Get Started
-              <img src="resources/down arrow-1.svg" alt="down_arrow" />
-            </button>
-          </td>
-          <td>
-            <button>
-              Get Started
-              <img src="resources/down arrow-1.svg" alt="down_arrow" />
-            </button>
-          </td>
-          <td>
-            <button>
-              Get Started
-              <img src="resources/down arrow-1.svg" alt="down_arrow" />
-            </button>
-          </td>
-        </tr>
-      </tfoot>
-    </table>
+    <div class="flex justify-center">
+      <table class="border-collapse w-[90%]">
+        <thead>
+          <tr>
+            <th></th>
+            <th class="text-[#263FA9]">Free</th>
+            <th class="text-[#263FA9]">Team</th>
+            <th class="text-[#263FA9]">Popular</th>
+            <th class="text-[#263FA9]">Enterprise</th>
+          </tr>
+          <tr>
+            <th></th>
+            <th class="text-[64px]">$0</th>
+            <th class="text-[64px]">$59</th>
+            <th class="text-[64px]">$99</th>
+            <th class="text-[64px]">$299</th>
+          </tr>
+          <tr class="[&>th]:pb-8">
+            <th></th>
+            <th class="text-[#4D5562] font-normal">Per month</th>
+            <th class="text-[#4D5562] font-normal">Per month</th>
+            <th class="text-[#4D5562] font-normal">Per month</th>
+            <th class="text-[#4D5562] font-normal">Per month</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Website number</td>
+            <td>01</td>
+            <td>10</td>
+            <td>50</td>
+            <td>Unlimited</td>
+          </tr>
+          <tr>
+            <td>Server storage</td>
+            <td>100 GB</td>
+            <td>500 GB</td>
+            <td>1 TB</td>
+            <td>Unlimited</td>
+          </tr>
+          <tr>
+            <td>Database</td>
+            <td>-</td>
+            <td>15</td>
+            <td>Unlimited</td>
+            <td>Unlimited</td>
+          </tr>
+          <tr>
+            <td>Unmetered Bandwidth</td>
+            <td>-</td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+          </tr>
+          <tr>
+            <td>SSD Disk</td>
+            <td>-</td>
+            <td>-</td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+          </tr>
+          <tr>
+            <td>VCPUS Fontworld</td>
+            <td>-</td>
+            <td>-</td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+          </tr>
+          <tr>
+            <td>Worldpress install</td>
+            <td>-</td>
+            <td>-</td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+          </tr>
+          <tr>
+            <td>Server speed</td>
+            <td>-</td>
+            <td>-</td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+            <td><img src="resources/check-1.svg" alt="check" /></td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td></td>
+            <td>
+              <button>
+                Get Started
+                <img src="resources/down arrow-1.svg" alt="down_arrow" />
+              </button>
+            </td>
+            <td>
+              <button>
+                Get Started
+                <img src="resources/down arrow-1.svg" alt="down_arrow" />
+              </button>
+            </td>
+            <td>
+              <button>
+                Get Started
+                <img src="resources/down arrow-1.svg" alt="down_arrow" />
+              </button>
+            </td>
+            <td>
+              <button>
+                Get Started
+                <img src="resources/down arrow-1.svg" alt="down_arrow" />
+              </button>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
 
     <div class="text-center">
       <p>
